# anon-chat

./: .env.example  Dockerfile  README.md  app.py  config.py  fly.toml  pyproject.toml  requirements.txt
frontend/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  fly.toml  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/composables/: socket.ts
frontend/src/router/: index.ts
frontend/src/views/: ChatView.vue  HomeView.vue  LandingView.vue
