[project]
name = "anon-chat-backend"
version = "0.1.0"
description = "Anon chat backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.0",
    "flask-cors>=5.0.1",
    "flask-socketio>=5.5.1",
    "gunicorn[eventlet]>=23.0.0",
    "loguru>=0.7.3",
    "python-dotenv>=1.1.0",
    "redis>=5.2.1",
]

[dependency-groups]
dev = ["mypy>=1.15.0"]

[tool.ruff]
line-length = 100
